--- a/index.html
+++ b/index.html
@@ -2,274 +2,188 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>komura's portfolio</title>
+    <title>komura-c's portfolio</title>
     <meta
       name="viewport"
       content="width=device-width,user-scalable=no,maximum-scale=1"
     />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
     <link
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
-    <header class="fade fade__down">
-      <img src="img/header.jpeg" alt="ヘッダーピアノ画像" decoding="async" />
-      <nav>
-        <h1>komura's portfolio</h1>
-        <a href="#profile" onclick="return LinkClick('profile');">Profile</a>
-        <a href="#product" onclick="return LinkClick('product');">Product</a>
-        <a href="#music" onclick="return LinkClick('music');">Music</a>
-        <a href="#contact" onclick="return LinkClick('contact');">Contact</a>
+    <header class="header">
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#top" class="nav__link js-nav-link">Top</a>
+          </li>
+          <li class="nav__item">
+            <a href="#about" class="nav__link js-nav-link">About</a>
+          </li>
+          <li class="nav__item">
+            <a href="#works" class="nav__link js-nav-link">Works</a>
+          </li>
+          <li class="nav__item">
+            <a href="#music" class="nav__link js-nav-link">Music</a>
+          </li>
+          <li class="nav__item">
+            <a href="#contact" class="nav__link js-nav-link">Contact</a>
+          </li>
+        </ul>
       </nav>
     </header>
-
-    <main>
-      <div id="profile" class="fade fade__up">
+    <main class="main">
+      <div id="top">
+        <div class="hero">
+          <h1 class="hero__title">komura-c's portfolio</h1>
+          <span class="hero__note hero__note--1">&#9835;</span>
+          <span class="hero__note hero__note--2">&#9834;</span>
+        </div>
+      </div>
+      <div id="about">
         <div class="container">
           <div class="heading">
-            <h2>Profile</h2>
-            <h3>komura (Yuki Ishii)</h3>
+            <h2 class="heading__title">About</h2>
+            <h3 class="heading__my-name">komura (Yuki Ishii)</h3>
           </div>
-          <div class="flex">
-            <div class="profile__left">
+          <div class="about">
+            <div class="about__left">
               <img
-                src="img/self.jpeg"
+                src="assets/self.jpeg"
                 alt="コムラのプロフィール画像"
+                class="about__self"
                 decoding="async"
               />
-              <hr />
+              <hr class="about__hr" />
               <div class="social">
-                <a href="https://twitter.com/komura_c/"
-                  ><i class="fab fa-twitter"></i
+                <a
+                  href="https://twitter.com/komura_c/"
+                  class="social__icon social__icon--twitter"
                 ></a>
-                <a href="https://github.com/komura-c/"
-                  ><i class="fab fa-github"></i
+                <a
+                  href="https://github.com/komura-c/"
+                  class="social__icon social__icon--github"
                 ></a>
-                <a href="https://qiita.com/komura_c/">
-                  <span class="fa-stack">
-                    <i class="fa fa-square fa-stack-2x"></i>
-                    <i class="fa fa-search fa-stack-1x fa-inverse fa-2x"></i>
-                  </span>
-                </a>
+                <a
+                  href="https://qiita.com/komura_c/"
+                  class="social__icon social__icon--qiita"
+                ></a>
+                <a
+                  href="https://komura.qrunch.io/"
+                  class="social__icon social__icon--qrunch"
+                ></a>
               </div>
             </div>
-            <div class="profile__right">
-              <h3>自己紹介</h3>
-              <p>
-                インターネットと音楽が好きです。<br />主にプログラミングと作曲(DTM)が趣味。<br />2019年春よりRuby
-                on Railsに触れ、<br />Webサービスを開発していきたいと思い、<br />現在、Webエンジニアを目指しています。
+            <div class="about__right">
+              <h3 class="about__title">自己紹介</h3>
+              <p class="about__text">
+                インターネットと音楽が好きです。主にプログラミングと作曲(DTM)が趣味。Pythonを使った経験からプログラミングの楽しさを知り、現在はAngularとFirebaseでWebサービスを個人開発しています。
               </p>
-              <h3>よく使用する技術</h3>
-              <p>
-                HTML, CSS, Bootstrap, Javascript, <br />Ruby, Ruby on Rails,
-                Python
+              <h3 class="about__title">よく使用する技術</h3>
+              <p class="about__text">
+                Angular, Typescript, Javascript, HTML5, CSS3, Python, Ruby
               </p>
             </div>
           </div>
         </div>
       </div>
-      <div id="product" class="fade fade__up">
+      <div id="works" class="js-fade">
         <div class="container">
           <div class="heading">
-            <h2>Product</h2>
-            <p>
-              今まで私が作成したものです。<br />画像をクリックすると詳細が見れます。
-            </p>
+            <h2 class="heading__title">Works</h2>
           </div>
-          <div id="product__lazy" class="product__list">
-            <div class="production">
-              <label for="portfolio">
-                <img
-                  src="img/portfolio.jpeg"
-                  alt="Portfolio"
-                  decoding="async"
-                />
-              </label>
-              <input type="checkbox" id="portfolio" class="cssacc" />
-              <div class="accshow">
-                <dl class="product-info">
-                  <dt>名前：</dt>
-                  <dd>ポートフォリオサイト</dd>
-                  <dt>説明：</dt>
-                  <dd>
-                    このサイトです。スクロールやアニメーションなどCSSとJavascriptに力を入れました。
-                  </dd>
-                  <dt>技術：</dt>
-                  <dd>HTML5, CSS3, Javascript</dd>
-                  <dt>URL：</dt>
-                  <dd>
-                    <a href="https://komura-c.github.io/portfolio/"
-                      >https://komura-c.github.io/portfolio/</a
-                    >
-                  </dd>
-                  <dt>コード：</dt>
-                  <dd>
-                    <a href="https://github.com/komura-c/portfolio/"
-                      >https://github.com/komura-c/portfolio/</a
-                    >
-                  </dd>
-                </dl>
-              </div>
-            </div>
-            <div class="production">
-              <label for="MusicWavesVisualizer">
-                <img
-                  src="img/musicvisual.jpg"
-                  alt="MusicWavesVisualizer"
-                  decoding="async"
-                />
-              </label>
-              <input type="checkbox" id="MusicWavesVisualizer" class="cssacc" />
-              <div class="accshow">
-                <dl class="product-info">
-                  <dt>名前：</dt>
-                  <dd>MusicWavesVisualizer</dd>
-                  <dt>説明：</dt>
-                  <dd>
-                    HTML5のWebAPIを使って画像と音楽を読み込んで波形動画を生成するサイトを作成しました。Javascriptに力を入れました。
-                  </dd>
-                  <dt>技術：</dt>
-                  <dd>HTML5, CSS3, Javascript</dd>
-                  <dt>URL：</dt>
-                  <dd>
-                    <a href="https://komura-c.github.io/MusicWavesVisualizer/"
-                      >https://komura-c.github.io/MusicWavesVisualizer/</a
-                    >
-                  </dd>
-                  <dt>コード：</dt>
-                  <dd>
-                    <a href="https://github.com/komura-c/MusicWavesVisualizer/"
-                      >https://github.com/komura-c/MusicWavesVisualizer/</a
-                    >
-                  </dd>
-                </dl>
-              </div>
-            </div>
-            <div class="production">
-              <label for="twitgram"
-                ><img src="img/twitgram.jpeg" alt="Twitgram" decoding="async"
-              /></label>
-              <input type="checkbox" id="twitgram" class="cssacc" />
-              <div class="accshow">
-                <dl class="product-info">
-                  <dt>名前：</dt>
-                  <dd>Twitgram</dd>
-                  <dt>説明：</dt>
-                  <dd>
-                    インスタグラムのクローンアプリをTechpitの教材にて作成しました。Herokuにて画像を保存できるようにAWSのS3を使うなど独自にカスタマイズしています。
-                  </dd>
-                  <dt>機能：</dt>
-                  <dd>
-                    ユーザー登録、ログイン、投稿、投稿へのコメント、いいねなど
-                  </dd>
-                  <dt>技術：</dt>
-                  <dd>Ruby, Ruby on Rails, HTML, CSS, Bootstrap, Javascript</dd>
-                  <dt>URL：</dt>
-                  <dd>
-                    <a href="https://twitgram0.herokuapp.com/"
-                      >https://twitgram0.herokuapp.com/</a
-                    >
-                  </dd>
-                  <dt>コード：</dt>
-                  <dd>
-                    <a href="https://github.com/komura-c/twitgram/"
-                      >https://github.com/komura-c/twitgram/</a
-                    >
-                  </dd>
-                </dl>
-              </div>
+          <div class="works">
+            <div class="work">
+              <div class="work__img"></div>
+              <dl class="work__dl">
+                <dt class="work__dt">名前：</dt>
+                <dd class="work__dd">MusicWavesVisualizer</dd>
+                <dt class="work__dt">説明：</dt>
+                <dd class="work__dd">
+                  HTML5のWebAPIを使って画像と音楽を読み込んで波形動画を生成するサイトを作成しました。Javascriptに力を入れました。
+                </dd>
+                <dt class="work__dt">技術：</dt>
+                <dd class="work__dd">HTML5, CSS3, Javascript</dd>
+                <dt class="work__dt">URL：</dt>
+                <dd class="work__dd">
+                  <a href="https://komura-c.github.io/music-waves-visualizer/"
+                    >https://komura-c.github.io/music-waves-visualizer/</a
+                  >
+                </dd>
+                <dt class="work__dt">コード：</dt>
+                <dd class="work__dd">
+                  <a href="https://github.com/komura-c/music-waves-visualizer/"
+                    >https://github.com/komura-c/music-waves-visualizer/</a
+                  >
+                </dd>
+              </dl>
             </div>
           </div>
         </div>
       </div>
-      <div id="music" class="fade fade__up">
+      <div id="music" class="js-fade">
         <div class="container">
           <div class="heading">
-            <h2>Music</h2>
-            <p>
-              今まで私が作曲したものです。<br />▷をクリックすると音楽が流れます。<br />※音量にご注意ください。
+            <h2 class="heading__title">Music</h2>
+            <p class="heading__text">
+              ▷をクリックすると音楽が流れます。※音量にご注意ください。
             </p>
           </div>
-          <div class="music__list">
-            <div id="soundcloud__box">
-              <object
-                data="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/524995878&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"
-                width="200"
-                height="200"
-              >
-              </object>
-              <object
-                data="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/436888101&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"
-                width="200"
-                height="200"
-              >
-              </object>
-            </div>
-            <p>
-              その他の曲は、<span
-                ><a href="https://soundcloud.com/komura_c" class="soundcloud"
-                  >Soundcloud</a
-                ></span
-              >で聴くことができます。
-            </p>
-          </div>
-        </div>
-      </div>
-      <div id="contact" class="fade fade__up">
-        <div class="container">
-          <div class="heading">
-            <h2>Contact</h2>
-            <p>
-              何かありましたら、<br />メール、TwitterのDMにて、<br />お気軽にご連絡ください。
-            </p>
-          </div>
-          <div class="contact__list">
-            <a>メール:</a
-            ><input
-              type="text"
-              class="my-email"
-              value="ut0p1a.c.jp@gmail.com"
-              readonly="readonly"
-            />
-            <br /><a>または</a> <br /><a>Twitter:</a
-            ><span
-              ><a href="https://twitter.com/komura_c" class="twitter"
-                >@komura_c</a
-              ></span
+          <div class="music">
+            <object
+              data="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/524995878&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"
+              width="100%"
+              height="200"
+              class="music__content"
             >
+            </object>
+            <object
+              data="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/436888101&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"
+              width="100%"
+              height="200"
+              class="music__content"
+            >
+            </object>
+            <p class="music__text">
+              その他の曲は、
+              <a href="https://soundcloud.com/komura_c" class="music__button"
+                >Soundcloud</a
+              >
+              で聴くことができます。
+            </p>
+          </div>
+        </div>
+      </div>
+      <div id="contact" class="js-fade">
+        <div class="container">
+          <div class="heading">
+            <h2 class="heading__title">Contact</h2>
+            <p class="heading__text">
+              何かありましたら、Twitterまたはメールよりお気軽にご連絡ください。
+            </p>
+          </div>
+          <div class="contact">
+            <a
+              href="https://twitter.com/komura_c/"
+              class="contact__twitter"
+            ></a>
+            <a href="mailto:komura_334@yahoo.co.jp" class="contact__mail"></a>
           </div>
         </div>
       </div>
     </main>
-
-    <div class="bg-css">
-      <ul class="music-notes">
-        <li>&#9835;</li>
-        <li>&#9833;</li>
-        <li>&#9834;</li>
-        <li>&#9833;</li>
-        <li>&#9834;</li>
-        <li>&#9835;</li>
-        <li>&#9833;</li>
-        <li>&#9834;</li>
-        <li>&#9835;</li>
-        <li>&#9833;</li>
-      </ul>
-    </div>
-
-    <footer>
-      <h3>Copyright &copy; komura</h3>
+    <footer class="footer">
+      <h3 class="footer__copyright">Copyright &copy; komura</h3>
     </footer>
-
-    <script type="text/javascript" src="script.js" defer></script>
     <script
       type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.1/js/all.min.js"
+      src="//code.jquery.com/jquery-3.5.1.min.js"
       defer
     ></script>
+    <script type="text/javascript" src="script.js" defer></script>
   </body>
 </html>
